# mcp-local-server

./: .env.example  .gitignore  LLM_DEV_GUIDE.md  README.md  pyproject.toml
docs/office/: Open data - Sensibilisation au RGPD - M-H Noël.pptx  Topical-Issues-Open-Data-Initiative.docx
scripts/: dev.ps1  dev.sh  devnav_build_index.py  generate_tools_catalog.py
src/: README.md  app_factory.py  config.py  json_utils.py  server.py  ui_html.py
src/app_core/: safe_json.py  tool_discovery.py
src/app_server/: app_factory_compact.py  static_mount.py  tools_routes.py
src/static/css/: control.css
src/static/js/: categories.js  (+5 more)
src/tool_specs/: academic_research_super.json  aviation_weather.json  date.json  dev_navigator.json  excel_to_sqlite.json  ffmpeg_frames.json  flight_tracker.json  http_client.json  lichess.json  math.json  minecraft_control.json  news_aggregator.json  office_to_pdf.json  open_meteo.json  pdf2text.json  pdf_download.json  pdf_search.json  playwright.json  script_executor.json  shell.json  ship_tracker.json  sqlite_db.json  stockfish_auto.json  tool_audit.json  universal_doc_scraper.json  velib.json
src/tools/: README.md  academic_research_super.py  aviation_weather.py  date.py  dev_navigator.py  excel_to_sqlite.py  ffmpeg_frames.py  flight_tracker.py  http_client.py  lichess.py  math.py  minecraft_control.py  news_aggregator.py  office_to_pdf.py  open_meteo.py  pdf2text.py  pdf_download.py  pdf_search.py  playwright.py  script_executor.py  shell.py  ship_tracker.py  sqlite_db.py  stockfish_auto.py  tool_audit.py  universal_doc_scraper.py  velib.py
(+255 files in other folders)
