[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-local-server"
version = "0.1.0"
description = "Public local MCP server with packaged tools and a web control panel"
readme = "README.md"
authors = [{ name = "ai-dragonfly" }]
requires-python = ">=3.10"
keywords = ["mcp", "local-server", "tools", "automation", "ai"]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.7.0",
  "requests>=2.31.0",
  "httpx>=0.28.0",
  "jsonschema>=4.25.0",
  "beautifulsoup4>=4.12.0",
  "pypdf>=4.0.0",
  "openpyxl>=3.1.2",
  "pandas>=2.3.0",
  "numpy>=1.24.0",
  "sympy>=1.12",
  "playwright>=1.47.0",
  "docx2pdf>=0.1.8",
  "websocket-client>=1.8.0",
  "mcipc>=2.4.0",
  "trimesh[easy]>=4.0.0",
  "python-chess>=1.999",
  "psutil>=5.9.0",
  "pillow>=10.0.0",
  "av>=11.0.0",
  "pyjson5>=1.6.0",
  "json5>=0.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0.0",
  "isort>=5.12.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
